[package]
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com>"]
edition = "2018"
name = "oled_hat_rp"
version = "0.1.0"

[dependencies]
psf = { git = "https://github.com/zaczkows/psf.git", rev = "4806ad27fda26715f72ccb323c751edd44af5577" }
rusttype = "0.9.x"
ssd1305 = { path = "../ssd1305" }
time = "0.2.x"
